build/testuserdir/var/cache/index/s30/errors/1/tests/event-gestures/tests/manual/ie10gestures.html.warn
WARNING:39:Unknown property user-select
